chore: add boilerplate configs

--- a/.gitignore
+++ b/.gitignore
@@ -48,10 +48,7 @@ web_modules/
 *.tgz
 .yarn-integrity
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+.env.*.local
 .cache
 .parcel-cache
 .next
