--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "github-actions",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A monorepo project for my GitHub actions.",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.3",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.4",
+    "rimraf": "^4.4.0",
+    "ts-jest": "^29.0.5",
+    "tsutils": "^3.21.0",
     "typescript": "^5.0.2"
   }
 }
