chore: run lerna init

--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,9 @@
 {
-  "$schema": "https://unpkg.com/lerna@latest/schemas/lerna-schema.json",
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "npmClient": "pnpm",
   "useWorkspaces": true,
-    "packages": [
-        "packages/*"
-    ]
+  "packages": [
+    "packages/*"
+  ],
+  "version": "0.0.0"
 }
