--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.5.0",
+    "lerna": "^6.5.1",
     "prettier": "^2.8.4",
     "rimraf": "^4.4.0",
     "ts-jest": "^29.0.5",
     "tsutils": "^3.21.0",
     "typescript": "^5.0.2"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
