--- a/nx.json
+++ b/nx.json
@@ -12,5 +12,20 @@
       }
     }
   },
-  "defaultBase": "main"
+  "defaultBase": "main",
+  "targetDefaults": {
+    "build": {
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "{projectRoot}/dist"
+      ]
+    },
+    "dev": {
+      "dependsOn": [
+        "^build"
+      ]
+    }
+  }
 }
