chore: add wip github action files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,20 +9,34 @@
   "parserOptions": {
     "project": "tsconfig.json",
     "sourceType": "module",
-    "ecmaVersion": 2022
+    "ecmaVersion": 2023
   },
-  "plugins": ["@typescript-eslint", "jest"],
+  "plugins": [
+    "@typescript-eslint",
+    "jest"
+  ],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:jest/recommended",
-    "prettier"
+    "plugin:prettier/recommended"
   ],
   "rules": {
-    // The following rule is enabled only to supplement the inline suppression
+    // The pfollowing rule is enabled only to supplement the inline suppression
     // examples, and because it is not a recommended rule, you should either
     // disable it, or understand what it enforces.
     // https://typescript-eslint.io/rules/explicit-function-return-type/
-    "@typescript-eslint/explicit-function-return-type": "warn"
-  }
+    "@typescript-eslint/explicit-function-return-type": "warn",
+    "prettier/prettier": "error"
+  },
+  "overrides": [
+    {
+      "files": [
+        "*.spec.ts"
+      ],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
+      }
+    }
+  ]
 }
