--- a/packages/github/package.json
+++ b/packages/github/package.json
@@ -1,19 +1,19 @@
 {
-  "$schema": "https://json.schemastore.org/package",
-  "name": "github-actions",
-  "description": "A monorepo project for my GitHub actions.",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "lerna run build",
-    "clean": "lerna run clean",
-    "lint": "eslint . --ext .ts --fix",
-    "test": "lerna run test"
-  },
+  "name": "github",
+  "version": "0.1.0",
+  "main": "main.js",
+  "description": "Actions that interact with the GitHub API.",
   "author": "nseguin42",
   "license": "MIT",
+  "dependencies": {
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
+    "@octokit/core": "^4.2.0",
+    "@octokit/plugin-rest-endpoint-methods": "^7.0.1"
+  },
   "devDependencies": {
+    "@octokit/auth-action": "^2.0.3",
+    "@octokit/openapi-types": "^16.0.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.3",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
@@ -23,11 +23,10 @@
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
-    "lerna": "^6.5.1",
-    "nx": "15.8.6",
     "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
     "tsutils": "^3.21.0",
     "typescript": "^5.0.2"
-  }
+  },
+  "scripts": {}
 }
